--- a/server/zdh/package.json
+++ b/server/zdh/package.json
@@ -14,6 +14,7 @@
     "connect-redis": "^3.3.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "decimal.js": "^10.1.1",
     "ejs": "^2.5.9",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
